--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -16,10 +16,15 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: 'true'
-      - run: sudo apt install libxrandr-dev
-      - run: sudo apt install libxinerama-dev
-      - run: sudo apt install libxcursor-dev
-      - run: sudo apt install libxi-dev
-      - run: sudo apt install libglvnd-dev
-      - run: sudo apt install libvulkan-dev
-      - run: ./build_linux.sh ${{matrix.configuration}} 
+
+      - name: Install dependencies
+        run: |
+            sudo apt install libxrandr-dev
+            sudo apt install libxinerama-dev
+            sudo apt install libxcursor-dev
+            sudo apt install libxi-dev
+            sudo apt install libglvnd-dev
+            sudo apt install libvulkan-dev
+        
+      - name: Build
+        run: ./build_linux.sh ${{matrix.configuration}} 
