modify build_macos to adjust the change in commit 849eef0533ce6a97776b4d0ce04ef0bbd933cea8

--- a/.github/workflows/build_macos.yml
+++ b/.github/workflows/build_macos.yml
@@ -16,6 +16,6 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: 'true'
-      - run: cmake -S engine -B build -G "Xcode"
+      - run: cmake -S . -B build -G "Xcode"
       - run: cmake --build build --config ${{matrix.configuration}} 
       
