--- a/engine/source/editor/CMakeLists.txt
+++ b/engine/source/editor/CMakeLists.txt
@@ -42,3 +42,7 @@ if(ENABLE_PHYSICS_DEBUG_RENDERER)
 endif()
 
 add_custom_command(TARGET ${TARGET_NAME} ${POST_BUILD_COMMANDS})
+
+#precompile
+#set global vari used by precompile
+set(PICCOLO_EDITOR_HEADS “${EDITOR_HEADERS}” PARENT_SCOPE)
