--- a/.gitlab/.gitlab-ci.yml
+++ b/.gitlab/.gitlab-ci.yml
@@ -1,11 +1,12 @@
 .job_rules_template: &job_rules
+  stage: build
   rules:
     - if: '$CI_PIPELINE_SOURCE == "merge_request_event" 
         && $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == "main"'
     - if: '$CI_PIPELINE_SOURCE == "merge_request_event" 
         && $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == "upstream"'
 
-build:build_in_mac:
+build_in_mac:
   tags:
     - mac
     - shell
@@ -13,7 +14,7 @@ build:build_in_mac:
   script:
     - ./build_macos.sh release
 
-build:build_in_ubuntu:
+build_in_ubuntu:
   image: cmake:3.23   # you can build it with Dockerfile offered in this project
   tags:
     - ubuntu
@@ -22,7 +23,7 @@ build:build_in_ubuntu:
   script:
     - ./build_linux.sh release
 
-build:build_in_windows:
+build_in_windows:
   tags:
     - windows
     - shell
