--- a/engine/3rdparty/glslang-sdk/External/CMakeLists.txt
+++ b/engine/3rdparty/glslang-sdk/External/CMakeLists.txt
@@ -70,6 +70,7 @@ endif()
 
 if(ENABLE_OPT AND NOT TARGET SPIRV-Tools-opt)
     if(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/spirv-tools)
+        option(SPIRV_SKIP_EXECUTABLES "" ON)
         set(SPIRV_SKIP_TESTS ON CACHE BOOL "Skip building SPIRV-Tools tests")
         add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/spirv-tools spirv-tools)
     endif()
