--- a/engine/configs/deployment/PiccoloEditor.ini
+++ b/engine/configs/deployment/PiccoloEditor.ini
@@ -1,3 +1,4 @@
+[asset]
 BinaryRootFolder=.
 AssetFolder=asset
 SchemaFolder=schema
@@ -8,3 +9,10 @@ DefaultWorld=asset/world/hello.world.json
 GlobalRenderingRes=asset/global/rendering.global.json
 GlobalParticleRes=asset/global/particle.global.json
 JoltAssetFolder=jolt-asset
+
+[key]
+Jump=Space
+WalkForward=W
+WalkBackward=S
+WalkLeft=A
+WalkRight=D
